updated BO and BLL

--- a/AppointmentFixturesProject/Views/Company/DeleteDepartment.cshtml
+++ b/AppointmentFixturesProject/Views/Company/DeleteDepartment.cshtml
@@ -29,11 +29,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Contact)
+            @Html.DisplayNameFor(model => model.phone)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Contact)
+            @Html.DisplayFor(model => model.phone)
         </dd>
 
         <dt>
