--- a/AppointmentFixturesProject/Views/Company/Index.cshtml
+++ b/AppointmentFixturesProject/Views/Company/Index.cshtml
@@ -17,7 +17,7 @@
                     @Html.DisplayName("Department Name")
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.Contact)
+                    @Html.DisplayNameFor(model => model.phone)
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.Email)
@@ -36,7 +36,7 @@
                         @Html.DisplayFor(modelItem => item.Name)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.Contact)
+                        @Html.DisplayFor(modelItem => item.phone)
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.Email)
