--- a/AppointmentFixturesProject/Views/Company/VIP.cshtml
+++ b/AppointmentFixturesProject/Views/Company/VIP.cshtml
@@ -18,13 +18,13 @@
                     @Html.DisplayNameFor(model => model.Designation)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.Contact)
+                    @Html.DisplayNameFor(model => model.Phone)
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.Email)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.Address)
+                    @Html.DisplayNameFor(model => model.Address1)
                 </th>
 
                 <th></th>
@@ -41,13 +41,13 @@
                         @Html.DisplayFor(modelItem => item.Designation)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.Contact)
+                        @Html.DisplayFor(modelItem => item.Phone)
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.Email)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.Address)
+                        @Html.DisplayFor(modelItem => item.Address1)
                     </td>
 
                     <td>
