--- a/AppointmentFixturesProject/Views/Software/ViewCompany.cshtml
+++ b/AppointmentFixturesProject/Views/Software/ViewCompany.cshtml
@@ -15,10 +15,10 @@
                     @Html.DisplayNameFor(model => model.Name)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.Location)
+                    @Html.DisplayNameFor(model => model.Address)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.Contact)
+                    @Html.DisplayNameFor(model => model.Phone)
                 </th>
 
 
@@ -33,10 +33,10 @@
                         @Html.DisplayFor(modelItem => item.Name)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.Location)
+                        @Html.DisplayFor(modelItem => item.Address)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.Contact)
+                        @Html.DisplayFor(modelItem => item.Phone)
                     </td>
 
 
