This is the commit after updating all the views which resulted because of change in database

--- a/AppointmentFixturesProject/Views/Company/Index.cshtml
+++ b/AppointmentFixturesProject/Views/Company/Index.cshtml
@@ -43,7 +43,9 @@
                     </td>
                     <td>
                         @Html.ActionLink("Edit", "EditDepartment", new { id = item.Id }, new { @class = "btn btn-warning" })
-       
+                        @Html.ActionLink("Details", "DetailsDepartment", new { id = item.Id }, new { @class = "btn btn-info" })
+
+
                         @Html.ActionLink("Delete", "DeleteDepartment", new { id = item.Id }, new { @class = "btn btn-danger" })
                     </td>
                 </tr>
