--- a/AppointmentFixturesProject/Views/Shared/_VIPSharedView.cshtml
+++ b/AppointmentFixturesProject/Views/Shared/_VIPSharedView.cshtml
@@ -28,7 +28,7 @@
                     <li>@Html.ActionLink("Home", "Index", "VIP")</li>
                     <li>@Html.ActionLink("Fix Appointment Timing", "FixAppointment", "VIP")</li>
                     <li>@Html.ActionLink("View Appointments Timing", "ViewAppointment", "VIP")</li>
-                    <li>@Html.ActionLink("Change Password", "ChangePassword", "VIP")</li>
+                    <li>@Html.ActionLink("Change Password", "ResetPassword", "Account")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
