--- a/AppointmentFixturesProject/Views/Company/VIP.cshtml
+++ b/AppointmentFixturesProject/Views/Company/VIP.cshtml
@@ -51,9 +51,11 @@
                     </td>
 
                     <td>
-                        @Html.ActionLink("Edit", "EditVIP", new { id = item.Id }, new { @class = "btn btn-warning" })
-                        @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-info" })
-                        @Html.ActionLink("Delete", "DeleteVIP", new { id = item.Id }, new { @class = "btn btn-danger" })
+                     
+                        @Html.ActionLink("Details", "DetailsVIP", new { id = item.Id }, new { @class = "btn btn-info" })
+                        @Html.ActionLink("View Schedule", "ScheduleVIP", new { id = item.Id }, new { @class = "btn btn-primary" })
+
+
                     </td>
                 </tr>
             }
