Some Minor Changes on View

--- a/AppointmentFixturesProject/Views/Software/DeleteCompany.cshtml
+++ b/AppointmentFixturesProject/Views/Software/DeleteCompany.cshtml
@@ -23,19 +23,19 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Location)
+            @Html.DisplayNameFor(model => model.Address)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Location)
+            @Html.DisplayFor(model => model.Address)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Contact)
+            @Html.DisplayNameFor(model => model.Phone)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Contact)
+            @Html.DisplayFor(model => model.Phone)
         </dd>
 
       
@@ -49,7 +49,9 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-danger" /> 
-            
+            @Html.ActionLink("Back To List", "ViewCompany", null, new { @class = "btn btn-info" })
+
+
         </div>
     }
 </div>
