--- a/AppointmentFixturesProject/Views/Software/Index.cshtml
+++ b/AppointmentFixturesProject/Views/Software/Index.cshtml
@@ -4,5 +4,11 @@
     Layout = "~/Views/Shared/_SoftwareSharedView.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Appointment Management System</h2>
+<hr />
+<div class="container">
+    This software appointment management system is a software which can be very helpfull for lots of company 
+    around. This is a SAAS based software for managing appointment. This Software can 
+    save lots of time which otherwise would be wasted by waiting in taking appointment.
+</div>
 
