--- a/AppointmentFixturesProject/Views/Company/DeleteDepartment.cshtml
+++ b/AppointmentFixturesProject/Views/Company/DeleteDepartment.cshtml
@@ -9,7 +9,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>BODepartment</h4>
+
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -50,8 +50,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-danger" /> |
-            
+            <input type="submit" value="Delete" class="btn btn-danger" /> 
+            @Html.ActionLink("Back To List", "Index", "Company", new { @class = "btn btn-info" })
         </div>
     }
 </div>
