--- a/AppointmentFixturesProject/Views/Company/EditDepartment.cshtml
+++ b/AppointmentFixturesProject/Views/Company/EditDepartment.cshtml
@@ -14,7 +14,6 @@
 
             <div class="form-horizontal">
 
-                <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 @Html.HiddenFor(model => model.Id)
 
@@ -63,6 +62,7 @@
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
                         <input type="submit" value="Update" class="btn btn-primary" />
+                        @Html.ActionLink("Back To List", "Index", "Company", new {@class="btn btn-info" })
                     </div>
                 </div>
             </div>
