Done Some Validation and Improvement in Some Views

--- a/AppointmentFixturesProject/Views/Company/CreateDepartment.cshtml
+++ b/AppointmentFixturesProject/Views/Company/CreateDepartment.cshtml
@@ -59,7 +59,7 @@
             @Html.LabelFor(model => model.Details, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.TextAreaFor(model => model.Details, new {  @class = "form-control" } )
-                @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.Details, "", new { @class = "text-danger" })
             </div>
         </div>
 
