--- a/AppointmentFixturesProject/Views/Company/Index.cshtml
+++ b/AppointmentFixturesProject/Views/Company/Index.cshtml
@@ -10,11 +10,12 @@
     <div class="container">
         <table class="table table-bordered table-hover">
             <tr class="success">
-                <th>
-                    @Html.DisplayName("Company Name")
-                </th>
+               
                 <th>
                     @Html.DisplayName("Department Name")
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.HOD)
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.phone)
@@ -28,12 +29,12 @@
             @foreach (var item in Model)
             {
                 <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.lstCompany.Name)
-
-                    </td>
+                    
                     <td>
                         @Html.DisplayFor(modelItem => item.Name)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.HOD)
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.phone)
