partail completion of fixed appointment and set appointment.. Validation Required

--- a/AppointmentFixturesProject/Views/Shared/_CompanySharedView.cshtml
+++ b/AppointmentFixturesProject/Views/Shared/_CompanySharedView.cshtml
@@ -26,6 +26,7 @@
                     <li>@Html.ActionLink("Create Department", "CreateDepartment", "Company")</li>
                     <li>@Html.ActionLink("VIP", "VIP", "Company")</li>
                     <li>@Html.ActionLink("CreateVIP", "RegisterVIP", "Account")</li>
+                    <li>@Html.ActionLink("Fix Appointment","FixAppointment","Company")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
