--- a/AppointmentFixturesProject/Views/Shared/_SoftwareSharedView.cshtml
+++ b/AppointmentFixturesProject/Views/Shared/_SoftwareSharedView.cshtml
@@ -38,7 +38,7 @@
         <div class="navbar navbar-inverse navbar-fixed-bottom">
 
             <footer style="color:white">
-                <p>&copy; @DateTime.Now.Year - yogeshgautam</p>
+                <p>&copy; @DateTime.Now.Year - TeamPlus</p>
             </footer>
 
         </div>
