--- a/AppointmentFixturesProject/Views/Shared/_VIPSharedView.cshtml
+++ b/AppointmentFixturesProject/Views/Shared/_VIPSharedView.cshtml
@@ -5,12 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Appointment Scheduler</title>
     @Styles.Render("~/Content/css")
+
+    @*<script src="https://code.jquery.com/jquery-1.12.4.js"></script>*@
+    <script src="~/Scripts/jquery-1.10.2.min.js"></script>
+    <script src="~/Scripts/bootstrap.min.js"></script>
     @Scripts.Render("~/bundles/modernizr")
-  
 
+    <!--for date picker-->
+    @*<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="/resources/demos/style.css">
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>*@
+    <!--end date time picker-->
 
-
-
+    <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
+    <script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
+    <script src="~/Scripts/employee.js"></script>
+    <script src="~/Scripts/AppointmentSetOrCancel.js"></script>
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -28,7 +38,7 @@
                     <li>@Html.ActionLink("Home", "Index", "VIP")</li>
                     <li>@Html.ActionLink("Fix Appointment Timing", "FixAppointment", "VIP")</li>
                     <li>@Html.ActionLink("View Appointments Timing", "ViewAppointment", "VIP")</li>
-                    <li>@Html.ActionLink("Change Password", "ResetPassword", "Account")</li>
+                    <li>@Html.ActionLink("Change Password", "ChangePassword", "VIP")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
@@ -42,14 +52,15 @@
         <div class="navbar navbar-inverse navbar-fixed-bottom">
 
             <footer style="color:white">
-                <p>&copy; @DateTime.Now.Year - yogeshgautam</p>
+                <p>&copy; @DateTime.Now.Year - TeamPlus</p>
             </footer>
-            
+
+        </div>
         </div>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    
-    @RenderSection("scripts", required: false)
+        @*@Scripts.Render("~/bundles/jquery")
+            @Scripts.Render("~/bundles/bootstrap")*@
+
+        @RenderSection("scripts", required: false)
 </body>
 </html>
