--- a/AppointmentFixturesProject/Views/Company/ViewMeetingOne.cshtml
+++ b/AppointmentFixturesProject/Views/Company/ViewMeetingOne.cshtml
@@ -15,18 +15,17 @@
 
     <div class="container">
         <h2>View Meeting</h2>
-        <button type="button" class="btn btn primary"  data-toggle=" modal" data-target="#myModal" onclick="clearTextBox();">Add New Employee</button><br /><br />
-        <table class="table table-striped">
+        <table class="table table-bordered table-hover">
             <thead>
-                <tr>
+                <tr class="success">
                     <th> ID  </th>
-                    <th>  VIPuser</th>
+                    <th>  VIP Name</th>
                     <th> Users</th>
                     <th> StartTime</th>
                     <th>EndTime </th>
                     <th> Date</th>
                     <th>Action</th>
-                    
+
                 </tr>
             </thead>
             <tbody class="tbody"></tbody>
