Commit to today work

--- a/AppointmentFixturesProject/Views/Company/CreateDepartment.cshtml
+++ b/AppointmentFixturesProject/Views/Company/CreateDepartment.cshtml
@@ -70,8 +70,14 @@
         </div>
         <br />
         <hr />
-        @ViewBag.Message
+        <div class="text-danger">
+            @ViewBag.Message
+        </div>
+        
+        <br />
+        <br />
     </div>
 }
+
 
 
