--- a/AppointmentFixturesProject/Views/Company/DetailsVIP.cshtml
+++ b/AppointmentFixturesProject/Views/Company/DetailsVIP.cshtml
@@ -92,7 +92,7 @@
 
 <p>
 
-    @Html.ActionLink("Back to List", "Index", null, new {@class="btn btn-primary" })
+    @Html.ActionLink("Back to List", "VIP", null, new {@class="btn btn-primary" })
 
     @Html.ActionLink("Edit", "EditVIP", new { id = Model.Id }, new { @class = "btn btn-warning" })
     @Html.ActionLink("Delete", "DeleteVIP", new { id = Model.Id }, new { @class = "btn btn-danger" })
