--- a/AppointmentFixturesProject/Views/Account/RegisterVIP.cshtml
+++ b/AppointmentFixturesProject/Views/Account/RegisterVIP.cshtml
@@ -26,7 +26,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    @Html.LabelFor(model => model.DepartmentId, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.Label("Department", htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
                         @Html.DropDownListFor(model => model.DepartmentId, new SelectList(ViewBag.Department, "Id", "Name"), new { @class = "form-control" })
                     </div>
@@ -78,11 +78,15 @@
             </div>
         </div>
         <div class="col-md-6">
-            <img src="~/Images/default.png" />
+            <div class="container" style="margin:auto">
+                <img src="~/Images/profile.png" />
+                <br />
+            </div>
+           
             <div class="form-group">
 
 
-
+                <br />
                 @Html.LabelFor(model => model.Photo, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                     @Html.TextBoxFor(model => model.Photo, new { type = "file" })
